# agent-factory

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agent_backend/: dependencies.py  main.py
agent_backend/db/: database.py
agent_backend/models/: ai_agent.py  user.py
agent_backend/routers/: agent_routes.py  auth_routes.py
agent_backend/schemas/: agent_schemas.py  user_schemas.py
agent_backend/services/: agent_service.py  model_management.py  nlp_service.py
agent_backend/utils/: auth.py  error_handlers.py  nlp_processing.py
alembic/: env.py
alembic/versions/: a5713a658d68_create_ai_agents_table.py  e30e8d98db4e_add_user_model.py
backend/: .editorconfig  .gitignore  Dockerfile  alembic.ini  mkdocs.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/db/: database.py
backend/app/models/: user.py
backend/app/routers/: user_routes.py
backend/app/schemas/: user.py
backend/app/services/: auth.py
backend/scripts/: test_db_connection.py
backend/tests/: test_main.py
docs/: Dockerfile  index.md  mkdocs.yml
docs/source/: api.rst  conf.py  index.rst
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(admin)/account/: page.tsx
frontend/src/app/(admin)/agents/: page.tsx
frontend/src/components/: placeholder.tsx
frontend/src/components/admin/: admin-panel-layout.tsx  footer.tsx  menu.tsx  navbar.tsx  sheet-menu.tsx  sidebar.tsx  user-nav.tsx
scripts/: run_servers.py
supabase/: config.toml
tests/: test_api_endpoints.py  test_auth.py  test_data_management.py  test_error_handling.py  test_main.py  test_nlp_processing.py
