[tool.poetry]
name = "agent-backend"
version = "0.1.0"
description = "Backend API for the AI Agent Framework"
authors = ["Rakesh Gangwar <rakesh@superjackfruit.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"